<resources>
    <string name="app_name">TaskApp</string>
    <string name="login">Login</string>
    <string name="passwd"><font size = "20">Password</font></string>
    <string name="email_example_com"><font size = "20">email@example.com </font></string>
    <string name="register">Register</string>
    <string name="home_projects">Projects</string>
    <string name="Project1">Project 1: Task App</string>
    <string name="Project2">Project 2: Blog App</string>
    <string name="Project3">Project 3: Hero App</string>
    <string name="logout">Logout</string>
    <string name="taskapp">Task App</string>
    <string name="role"><font size = "20">Role</font></string>
    <string name="new_project">New Project</string>
    <string name="new_project_title">New project title:</string>
    <string name="new_project_description">New project description:</string>
    <string name="submit_new_project">Create Project</string>
    <string name="project_profile_title">Project 4: Example Project</string>
    <string name="project_profile_description"><b>Description:</b> </string>
    <string name="project_profile_description_holder">Here you\'ll be able to see whatever description your project has.</string>
    <string name="project_participants"><u><b>Project participants:</b></u></string>
    <string name="project_participants_example">-Carmencita Avedaño, Team Lead</string>
    <string name="project_creation_date"><u><b>Project Creation Date</b></u></string>
    <string name="project_creation_date_example">08/09/2022</string>
    <string name="project_deadline"><u><b>Project Deadline</b></u></string>
    <string name="project_deadline_example">15/11/2022</string>
    <string name="tasks_todo"><u><b>Most Urgent Tasks</b></u></string>
    <string name="tasks_todo_example">-Task app, Proyecto Parte 1; Implement Navigation</string>
    <string name="project_percentage"><b>Percentage of project completed:</b></string>
    <string name="project_percentage_holder">0%</string>
    <string name="add_participants">Add new members</string>
    <string name="view_participants_requests">View requests (1)</string>
    <string name="project_admin"><b>Project admin:</b></string>
    <string name="project_admin_holder">Julio Cortés</string>
    <string name="project_status"><b>Project status:</b></string>
    <string name="project_status_holder">In process...</string>
    <string name="add_participants_example1">William Carter, Developer</string>
    <string name="add_participants_example2">Pablo Silva, Developer</string>
    <string name="add_participants_example3">María Pía Sanchez, Team Lead</string>
    <string name="add_participants_example"><b>Available Users:</b></string>
    <string name="add_button">+ ADD TO PROJECT</string>
    <string name="view_project_request_title">Pending Requests</string>
    <string name="home_tasks">My Tasks (developer view)</string>
    <string name="Project1task">Proyecto 1: Task App: Add tasks menu ; Assigned by Julio Cortés</string>
    <string name="Project2task">Proyecto 2: Blog App: Implement navigation ; Assigned by María Pía Sanchez</string>
    <string name="task_example">See task profile example</string>
    <string name="task_profile_title">Task 4: Example Task</string>
    <string name="task_profile_description">Description:</string>
    <string name="task_creator">Task Creator:</string>
    <string name="task_participants"><u><b>Task participants:</b></u></string>
    <string name="task_participants_example">William Carter, Developer</string>
    <string name="task_comments_title"><u><b>Comments:</b></u></string>
    <string name="task_comments_example">- William Carter: Don\'t forget that this view is how a team lead would see it. A developer would alos have the option to add comments here...</string>
    <string name="task_deadline"><b>Task Deadline</b></string>
    <string name="task_status"><b>Task Status</b></string>
    <string name="add_task_member_example">-Carmencita Avedaño, Developer</string>
    <string name="new_task">New Task</string>
    <string name="new_task_title"><b>New task title:</b></string>
    <string name="new_task_description"><b>New task description:</b></string>
    <string name="create_task_button_text">Add members</string>
    <string name="add_tasks">Add Tasks</string>
    <string name="project_example">See the project profile example</string>
    <string name="filter_by_date">Filter by Date</string>
    <string name="tasks">Tasks</string>
    <string name="create_new">Create a new project!</string>
    <string name="create_new_task">Create a new task!</string>
    <string name="profile">Profile</string>
    <string name="stat1">Projects you have participated: 10</string>
    <string name="stat2">Tasks you have participated: 13</string>
    <string name="stat3">Comments you have written: 30</string>
    <string name="stat4">Success ratio: 85%</string>
    <string name="project">Projects</string>
    <string name="hint_task">Task...</string>
    <string name="save">Save</string>
    <string name="hint_descr">Description...</string>
    <string name="hint_project">Project...</string>
    <string name="delete_pr">Delete Project</string>
    <string name="delete_ts">Delete Task</string>
    <string name="hint_admin">Admin...</string>
    <string name="hint_participant">Participant...</string>
    <string name="hint_crdate">Creation Date...</string>
    <string name="hint_deadline">Deadline...</string>
    <string name="hint_task_cr">Task Creator... </string>
    <string name="hint_comment">Comment...</string>
    <string name="update_project">Update Project</string>
    <string name="hint_percentage">Percentage...</string>
    <string name="hint_status">Status...</string>
</resources>