<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProjectProfileFragment">

    <TextView
        android:id="@+id/profileProjectTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#673AB7"
        android:gravity="center"
        android:padding="20sp"
        android:text="@string/project_profile_title"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"/>

    <ImageButton
        android:id="@+id/leaveProjectProfileButton"
        android:layout_width="78dp"
        android:layout_height="73dp"
        android:layout_marginTop="656dp"
        android:src="?attr/homeAsUpIndicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileDescriptionTextView"
        android:layout_width="378dp"
        android:layout_height="70dp"
        android:layout_marginTop="176dp"
        android:text="@string/project_profile_description"
        app:layout_constraintEnd_toEndOf="@id/profileProjectTextView"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/projectParticipantsExampleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="296dp"
        android:text="@string/project_participants_example"
        app:layout_constraintEnd_toEndOf="@id/profileProjectTextView"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/projectParticipantsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="264dp"
        android:text="@string/project_participants"
        app:layout_constraintEnd_toEndOf="@id/profileProjectTextView"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/creationDateExampleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:text="@string/project_creation_date_example"
        app:layout_constraintEnd_toEndOf="@id/profileProjectTextView"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/creationDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="364dp"
        android:text="@string/project_creation_date"
        app:layout_constraintEnd_toEndOf="@id/profileProjectTextView"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tasksTODOExampleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="484dp"
        android:text="@string/tasks_todo_example"
        app:layout_constraintEnd_toEndOf="@id/profileProjectTextView"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tasksTODOTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="456dp"
        android:text="@string/tasks_todo"
        app:layout_constraintEnd_toEndOf="@id/profileProjectTextView"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/projectDeadlineExampleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:text="@string/project_deadline_example"
        app:layout_constraintEnd_toEndOf="@id/profileProjectTextView"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/projectDeadlineTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="364dp"
        android:text="@string/project_deadline"
        app:layout_constraintEnd_toEndOf="@id/profileProjectTextView"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/projectPercentageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="552dp"
        android:text="@string/project_percentage"
        app:layout_constraintEnd_toEndOf="@id/profileProjectTextView"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addParticipantsButton"
        android:layout_width="115dp"
        android:layout_height="63dp"
        android:layout_marginTop="264dp"
        android:text="@string/add_participants"
        app:layout_constraintEnd_toEndOf="@id/profileProjectTextView"
        app:layout_constraintHorizontal_bias="0.908"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/acceptParticipantsButton"
        android:layout_width="125dp"
        android:layout_height="77dp"
        android:layout_marginTop="656dp"
        android:text="@string/view_participants_requests"
        app:layout_constraintEnd_toEndOf="@id/profileProjectTextView"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/green"/>

    <TextView
        android:id="@+id/projectAdminTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        android:text="@string/project_admin"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/profileProjectTextView"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/projectStatusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="584dp"
        android:text="@string/project_status"
        app:layout_constraintEnd_toEndOf="@id/profileProjectTextView"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>