<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TaskProfile.TaskProfileFragment">

    <TextView
        android:id="@+id/taskTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#008ECC"
        android:gravity="center"
        android:padding="20sp"
        android:text="@string/task_profile_title"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"/>

    <ImageButton
        android:id="@+id/leaveTaskProfileButton"
        android:layout_width="78dp"
        android:layout_height="73dp"
        android:layout_marginTop="32dp"
        android:src="?attr/homeAsUpIndicator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskStatusTextView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/taskDescriptionTextView"
        android:layout_width="78dp"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="176dp"
        android:text="@string/task_profile_description"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/taskDescriptionTextView2"
        android:layout_width="314dp"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="176dp"
        android:text="@string/task_profile_description"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/taskDescriptionTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/taskParticipantsExampleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="296dp"
        android:text="@string/task_participants_example"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/taskParticipantsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="264dp"
        android:text="@string/task_participants"
        app:layout_constraintBottom_toTopOf="@+id/taskParticipantsExampleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/creationDateExampleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="396dp"
        android:text="@string/project_creation_date_example"
        app:layout_constraintStart_toEndOf="@+id/taskCommentExampleTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/taskDeadlineTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="268dp"
        android:layout_marginTop="364dp"
        android:text="@string/task_deadline"
        app:layout_constraintBottom_toTopOf="@+id/creationDateExampleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/taskCommentExampleTextView"
        android:layout_width="223dp"
        android:layout_height="88dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="380dp"
        android:text="@string/task_comments_example"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/taskCommentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="356dp"
        android:text="@string/task_comments_title"
        app:layout_constraintEnd_toStartOf="@+id/taskCommentExampleTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addParticipantsButton"
        android:layout_width="115dp"
        android:layout_height="63dp"
        android:layout_marginStart="252dp"
        android:layout_marginTop="264dp"
        android:text="@string/add_participants"
        app:layout_constraintHorizontal_bias="0.908"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/taskCreatorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="224dp"
        android:text="@string/task_creator"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/taskCreatorTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="224dp"
        android:text="@string/task_creator"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/taskCreatorTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/taskStatusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/task_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskCommentExampleTextView" />

    <TextView
        android:id="@+id/taskStatusTextView2"
        android:layout_width="88dp"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="472dp"
        android:text="@string/task_status"
        app:layout_constraintStart_toEndOf="@+id/taskStatusTextView"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>