<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateTaskFragment">

    <TextView
        android:id="@+id/createTaskTextView"
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:background="#008ECC"
        android:gravity="center"
        android:padding="20sp"
        android:text="@string/new_task"
        android:textSize="50sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/newTaskTitleTextView"
        android:layout_width="404dp"
        android:layout_height="26dp"
        android:layout_marginTop="188dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/create_new_task"
        android:textSize="20sp"
        android:drawableStart="@drawable/ic_baseline_assignment_24"
        android:drawablePadding="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/newTaskTitleTextView2"
        android:layout_width="404dp"
        android:layout_height="57dp"
        android:layout_marginTop="224dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/new_task_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/newTaskDescriptionTextView"
        android:layout_width="404dp"
        android:layout_height="57dp"
        android:layout_marginTop="280dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/new_task_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/returnToProjectsButton"
        android:layout_width="62dp"
        android:layout_height="99dp"
        android:layout_marginTop="4dp"
        android:src="?attr/actionModeCloseDrawable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.008"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createNewTaskButton"
        android:layout_width="144dp"
        android:layout_height="120dp"
        android:layout_marginTop="540dp"
        android:text="@string/create_task_button_text"
        android:backgroundTint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/newTaskDeadlineTextView"
        android:layout_width="404dp"
        android:layout_height="57dp"
        android:layout_marginTop="336dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/task_deadline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>